Storage Service integration